--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "kibana-xlsx-import",
-  "version": "7.9.1",
+  "version": "7.10.0",
   "description": "Import XLSX/CSV to Elasticsearch indices",
   "kibana": {
     "version": "kibana",
     "templateVersion": "1.0.0"
   },
   "scripts": {
-    "preinstall": "node ../../preinstall_check",
     "kbn": "node ../../scripts/kbn",
     "es": "node ../../scripts/es",
+    "build": "yarn plugin-helpers build",
+    "plugin-helpers": "node ../../scripts/plugin_helpers",
     "lint": "../../node_modules/.bin/eslint .",
-    "start": "../../node_modules/.bin/plugin-helpers start --oss --no-watch",
-    "test:server": "../../node_modules/.bin/plugin-helpers test:server",
-    "test:browser": "../../node_modules/.bin/plugin-helpers test:browser",
-    "build": "../../node_modules/.bin/plugin-helpers build"
+    "start": "node ../../scripts/plugin_helpers start --oss --no-watch",
+    "test:server": "node ../../scripts/plugin_helpers test:server",
+    "test:browser": "node ../../scripts/plugin_helpers test:browser"
   },
   "dependencies": {
-    "typescript": "3.9.5",
-    "axios": "^0.20.0",
-    "font-awesome": "^4.7.0",
-    "react-dom": "^16.14.0",
+    "typescript": "4.0.2",
+    "axios": "^0.19.2",
+    "font-awesome": "4.7.0",
+    "react-dom": "^16.12.0",
     "short-uuid": "^4.1.0",
-    "uuid": "^8.3.1",
+    "uuid": "3.3.2",
     "nanoid": "^3.1.16",
     "xlsx": "^0.16.8"
   }
